--- a/source/_posts/操作系统.md
+++ b/source/_posts/操作系统.md
@@ -17,7 +17,7 @@ math: true
     - 进程是系统进行资源分配和调度的独立单位，而程序不是。
 ### 进程的状态
 ==三态模型：==
-```
+```mermaid
 graph LR
 id(就绪)--调度-->id1(运行)
 id1(运行)--等待某个事件-->id2(等待)
@@ -41,7 +41,7 @@ P操作|S=S-1|申请资源
 V操作|S=S+1|释放资源
 
 #### 同步模型 
-```
+```mermaid
 graph LR
 
 id(生产者)-->id1(市场)
@@ -54,7 +54,8 @@ id1(市场)-->id2(消费者)
 PV操作是成对的
 
 #### 前趋图（帮助理解）
-```
+
+```mermaid
 graph LR
 id(A)-->id3(D)
 id1(B)-->id3(D)
@@ -138,7 +139,7 @@ $$
 ## 作业管理
 ### 作业状态与作业管理 
 
-```
+```mermaid
 graph LR
 id(提交)-->id1(后备)
 id1(后备)-->id2(执行)
@@ -157,18 +158,18 @@ $$
 ## 文件管理
 ### 索引文件结构
 - 直接索引：
-```
+```mermaid
 graph LR
 id1(索引节点)-->id2(物理盘块)
 ```
 - 一级间接索引：
-```
+```mermaid
 graph LR
 id1(索引节点)-->id3(地址项)
 id3(地址项)-->id2(物理盘块)
 ```
 - 二级间接索引：
-```
+```mermaid
 graph LR
 id1(索引节点)-->id3(地址项)
 id3(地址项)-->id4(地址项)
