微分中值定理

--- a/source/_posts/函数-极限与连续.md
+++ b/source/_posts/函数-极限与连续.md
@@ -10,7 +10,7 @@ math: true
 原则：
 1. 分母不能为0
     $$
-    \frac{1}{x}: x =\not 0
+    \frac{1}{x}: x \neq 0
     $$
 2. 开偶次方时被开方数大于等于0
     $$
@@ -111,15 +111,15 @@ $$
     - 常见：<br>
         函数|周期
         ---|---
-        sin x, cos x|$T=2\pi$
-        tan x, cot x|$T=\pi$
-        sin(ax+b),cos(ax+b)|$T=\frac{2\pi}{|a|}$
-        tan(ax+b),cot(ax+b)|$T=\frac{\pi}{|a|}$
+        $\sin x, \cos x$|$T=2\pi$
+        $\tan x, \cot x$|$T=\pi$
+        $\sin(ax+b),\cos(ax+b)$|$T=\frac{2\pi}{\mid a\mid}$
+        $\tan(ax+b),\cot(ax+b)$|$T=\frac{\pi}{\mid a\mid}$
 
 ### 反函数
 求反函数步骤：
-1. 反解x
-2. x,y互换
+1. 反解$x$
+2. $x$,$y$互换
 3. 注明定义域
 
 ## 极限
