更新 函数-极限与连续

--- a/source/_posts/函数-极限与连续.md
+++ b/source/_posts/函数-极限与连续.md
@@ -41,25 +41,31 @@ $$
     例如：已知$f(x+1) = x^2 + 2x + 2$, 则$f(x)$ = _____<br>
     凑：
     $$
-    f(x+1) = x^2+2x+1+1 \\
-    =(x+1)^2+1
+    \begin{aligned}
+        f(x+1) &= x^2+2x+1+1 \\
+        &=(x+1)^2+1
+    \end{aligned}
     $$
     换元：令$x+1=t, x=t$
     $$
-    \therefore f(t) = (t-1)^2 + 2(t-1) + 2 \\
-    = t^2-2t+1+2t-2+2 \\
-    = t^2+1 \\
-    \therefore f(x)=x^2+1 
+    \begin{aligned}
+        \therefore f(t) &= (t-1)^2 + 2(t-1) + 2 \\
+        &= t^2-2t+1+2t-2+2 \\
+        &= t^2+1 \\
+        \therefore f(x)&=x^2+1 
+    \end{aligned}
     $$
 - 已知$f[φ(x)]$, 求$f[ψ(x)]$。先求$f(x)$在求$f[ψ(x)]$<br>
-    例如：已知$f(x-1)=x^2-x$,则$f(\sqrt{x})$=____
+    例如：已知$f(x-1)=x^2-x$,则$f(\sqrt{x})$=____<br>
+    令$x-1=t, x=1+t$
     $$
-    令x-1=t, x=1+t \\
-    \therefore f(t)=(1+t)^2-(1+t) \\
-    =1+2t+t^2-1-t \\
-    = t^2+t \\
-    \therefore f(x)=x^2+x \\
-    \therefore f(\sqrt{x})=x+\sqrt{x} \\
+    \begin{aligned}
+        \therefore f(t)&=(1+t)^2-(1+t) \\
+        &=1+2t+t^2-1-t \\
+        &= t^2+t \\
+        \therefore f(x)&=x^2+x \\
+        \therefore f(\sqrt{x})&=x+\sqrt{x} \\
+    \end{aligned}
     $$
 ### 函数的四种性质
 1. 单调性
@@ -143,83 +149,101 @@ $$
     2. 极限值出现无穷大
 
 ### 极限的计算
-#### 四则运算
+- 四则运算
+
 $$
-设\lim f(x)=A \lim g(x)=B则：\\
-\lim[f(x)\pm g(x)]=\lim f(x)\pm lim g(x)=A\pm B \\
-\lim[f(x)·g(x)]=\lim f(x)·\lim g(x)=A·B \\
-\lim \frac{f(x)}{g(x)}=\frac{\lim f(x)}{\lim g(x)}=\frac{A}B
+\begin{array}{rll}
+    设\lim f(x)&=A \lim g(x)=B则：\\
+    \lim[f(x)\pm g(x)]&=\lim f(x)\pm lim g(x)&=A\pm B \\
+    \lim[f(x)·g(x)]&=\lim f(x)·\lim g(x)&=A·B \\
+    \lim \frac{f(x)}{g(x)}&=\frac{\lim f(x)}{\lim g(x)}&=\frac{A}B
+\end{array}
 $$
 
-#### 1. 趋近有定义位置时直接代入<br>
-例如：
-$$
-    \lim_{x\to2}\frac{x^2+x-1}{2x+1} \\
-    =\frac{4+2-1}{2·2+1} \\
-    =\frac55 = 1
-$$
-#### 2. (趋近与无穷时)抓大头(次数最高的)<br>
-例如：
-$$
-    \lim_{x\to\infty}\frac{a_0x^m+a_1x^{m-1}+···+a_m}{b_0x^n+b_1x^{n-1}+···+b_n} = 
-    \left\{ 
-    \begin{array}{c}
-    \infty,&\text m>n \\
-    \frac{a_0}{b_0},&\text m=n \\
-    0, &\text m<n
-    \end{array}
-    \right. 
-$$
-#### 3. **两个重要极限**
-1. 
-$$
-    \lim_{x\to0}\frac{\sin x}{x}=1(x可换任何未知数)
-$$
-例如：
-$$
-    \lim_{x\to\infty}x\sin\frac{1}{2x} \\
-    = \lim_{x\to\infty}\frac{\sin \frac{1}{2x}}{\frac{1}{2x}}·\frac{1}{2} \\
-    = 1·\frac{1}{2} = \frac{1}{2}
-$$
-2.
-$$
-    \lim_{x\to\infty}(1+\frac1x)^x
-    = \lim_{x\to0}(1+x)^\frac1x \\
-    =e \\
-    \therefore \lim_{□\to0}(1+□)^\frac1□ = e, 1^\infty
-$$
-步骤：<br>
-1. 凑“1”
-2. 凑“+”
-3. 凑“互倒关系”
+1. 趋近有定义位置时直接代入<br>
+    例如：
+    $$
+    \begin{aligned}
+        &\lim_{x\to2}\frac{x^2+x-1}{2x+1} \\
+        &=\frac{4+2-1}{2·2+1} \\
+        &=\frac55 = 1
+    \end{aligned}
+    $$
+2. (趋近与无穷时)抓大头(次数最高的)<br>
+    例如：
+    $$
+        \lim_{x\to\infty}\frac{a_0x^m+a_1x^{m-1}+···+a_m}{b_0x^n+b_1x^{n-1}+···+b_n} = 
+        \left\{ 
+        \begin{array}{c}
+        \infty,&\text m>n \\
+        \frac{a_0}{b_0},&\text m=n \\
+        0, &\text m<n
+        \end{array}
+        \right. 
+    $$
+3. **两个重要极限**
+    1. 
+    $$
+        \lim_{x\to0}\frac{\sin x}{x}=1(x可换任何未知数)
+    $$
+    例如：
+    $$
+    \begin{aligned}
+        &\lim_{x\to\infty}x\sin\frac{1}{2x} \\
+        =& \lim_{x\to\infty}\frac{\sin \frac{1}{2x}}{\frac{1}{2x}}·\frac{1}{2} \\
+        =& 1·\frac{1}{2} = \frac{1}{2}
+    \end{aligned}
+    $$
+    2.
+    $$
+    \begin{aligned}
+        \lim_{x\to\infty}(1+\frac1x)^x
+        &= \lim_{x\to0}(1+x)^\frac1x \\
+        &=e \\
+        \therefore \lim_{□\to0}(1+□)^\frac1□ &= e, 1^\infty
+    \end{aligned}
+    $$
+    步骤：<br>
+    1. 凑“1”
+    2. 凑“+”
+    3. 凑“互倒关系”
 
-#### 4. **等价无穷小代换** <br>
-当x趋近与0时
-$$
-1. \sin x、\tan x、\arcsin x、\arctan x ～ x \\
-2. \large e^x-1、\ln(1+x)～x \\
-3. 1-\cos x ～ \frac{1}{2}x^2 \\
-4. \sqrt{1+x}-1 ～ \frac{1}{2}x
-$$
-注：乘除可用，加减不可用.
+4. **等价无穷小代换** <br>
+    当x趋近与0时
+    $$
+    \begin{aligned}
+        1. &\sin x、\tan x、\arcsin x、\arctan x ～ x \\
+        2. &\large e^x-1、\ln(1+x)～x \\
+        3. &1-\cos x ～ \frac{1}{2}x^2 \\
+        4. &\sqrt{1+x}-1 ～ \frac{1}{2}x
+    \end{aligned}
+    $$
+    注：乘除可用，加减不可用.
     
-#### 5. **洛必达**
+5. **洛必达**
 $$
 对于\frac00或\frac{\infty}{\infty}型 \\
 有\lim \frac{f(x)}{g(x)}=\lim \frac{f\prime(x)}{g\prime(x)} \\
 
 注：用一步验证一步，若仍为对于\frac00或\frac{\infty}{\infty}型,可继续洛必达。 \\
 $$
-#### 6. 无穷减无穷型：通分合并
-#### 7. 根式有理化
-1. 乘以有理化因子（凑平方差）
-2. 多出来的根号直接带入
-#### 8. 零乘无穷型<br>
-等于一个除以另一个的倒数再洛必达
-#### 9. 幂指函数求极限
-单边取对数
+6. 无穷减无穷型：通分合并<br>
+7. 根式有理化<br>
+    1. 乘以有理化因子（凑平方差）
+    2. 多出来的根号直接带入
+8. 零乘无穷型<br>
+    等于一个除以另一个的倒数再洛必达
+9. 幂指函数求极限<br>
+    单边取对数：<br>
+    适用于幂指函数$y=f(x)^{g(x)}$<br>
+    步骤：
+    1. 恒等变形
+    $$
+    y=e^{\ln f(x)^{g(x)}} = e^{g(x)\cdot\ln f(x)}
+    $$
+    2. 当作复合函数求导
 
-#### 10. 无穷小×有界函数=无穷小
+10. 无穷小×有界函数=无穷小
 
 ### 求极限式中的未知数
 将式子正常求极限再令带未知数的式子等于题目结果。
@@ -230,7 +254,7 @@ $$
     无穷大：若$\lim f(x)=\infty$,则称$f(x)$为无穷大
 2. 无穷小与无穷大的关系<br>
     **无穷小与无穷大互为倒数**<br>
-    若$\lim f(x)=0$ ,则$\lim\frac{1}{f(x)}=\infty$;<br>
+    若$\lim f(x)=0$,则$\lim\frac{1}{f(x)}=\infty$;<br>
     若$\lim f(x)=\infty$,则$\lim\frac{1}{f(x)}=0$
 3. 无穷小的性质
     1. ==有限个无穷小==之**和**仍为无穷小;
@@ -264,7 +288,7 @@ $$
     \left\{
     \begin{array}{l}
     可去：左=右 \\
-    跳跃：左\not=右
+    跳跃：左\neq右
     \end{array}
     \right.
     
