mermaid 代码块使用方式改成tag使用方式

--- a/source/_posts/系统开发基础.md
+++ b/source/_posts/系统开发基础.md
@@ -123,7 +123,7 @@ mermaid: true
 
 ## 软件测试
 
-```mermaid
+{% mermaid %}
 graph LR
 静态测试-->桌面检查
 静态测试-->代码审查
@@ -133,7 +133,7 @@ graph LR
 动态测试-->灰盒测试
 黑盒测试-->等价类划分/边界值分析/错误推断/因果图
 白盒测试-->语句覆盖/判定覆盖/条件覆盖/条件判定覆盖/路径覆盖
-```
+{% endmermaid %}
 - 等价类划分
     - 确定无效与有效等价类
     - 设计用例尽可能多的覆盖有效类
@@ -142,7 +142,7 @@ graph LR
     - 处理边界情况时最容易出错
     - 选区的测试数据应该恰好等于、稍小于或稍大于边界值
 
-```mermaid
+{% mermaid %}
 graph LR
 
 需求分析---验收测试
@@ -162,7 +162,7 @@ graph LR
 集成测试-.->模块间的接口和通信
 系统测试-.->需要硬件环境,模拟一个真实环境进行恢复测试/安全性测试/强度测试/性能测试/可靠性测试和安装测试
 验收测试-.->以用户为主导的测试-软件配置审查/验收测试
-```
+{% endmermaid %}
 - 回归测试：测试出bug在提第二次提交的时候再测一遍。
 - 性能测试
     - 负载测试：在一定的资源的条件下能够承受的负载（最大负荷量）是多少。
@@ -222,13 +222,13 @@ $$
 ### 软件过程改进-CMMI
 CMMI（软件成熟度模型）：衡量一个企业达到了一个什么资质。
 
-```mermaid
+{% mermaid %}
 graph BT
 初始级--纪律化-->可管理级
 可管理级--标准化-->已定义级
 已定义级--可预测-对过程和质量可以度量-->定量管理级
 定量管理级--持续优化改进-->优化管理级
-```
+{% endmermaid %}
 ## 项目管理
 十大知识领域：
 1. 范围管理
