--- a/source/_posts/规范化理论.md
+++ b/source/_posts/规范化理论.md
@@ -13,18 +13,18 @@ mermaid: true
 ## 函数依赖
 - 部分依赖<br>
 依赖集1：{AB -> C, A -> C}
-```mermaid
+{% mermaid %}
 graph LR
 A-->C
 B-->C
-```
+{% endmermaid %}
 - 传递依赖<br>
 依赖集2：{A -> B, B -> C}
-```mermaid
+{% mermaid %}
 graph LR
 A-->B
 B-->C
-```
+{% endmermaid %}
 
 ## 键
 - 候选键<br>
@@ -53,7 +53,7 @@ B-->C
 - BC范式（BCNF）<br>
 当且仅当依赖集中每个依赖的决定因素必定包含该关系模式的某个候选码。
 
-```mermaid
+{% mermaid %}
 graph TB
 1NF-->2NF
 1NF---属性值都是不可分的原子
@@ -62,7 +62,7 @@ graph TB
 3NF-->BCNF
 3NF---清除非主属性对候选键的传递依赖
 BCNF---清除主属性对候选键的部分和传递依赖
-```
+{% endmermaid %}
 1NF ⊃ 2NF ⊃ 3NF ⊃ BCNF
 
 ## 模式分解
