--- a/source/_posts/计算机网络与信息安全.md
+++ b/source/_posts/计算机网络与信息安全.md
@@ -155,13 +155,13 @@ C类|24位网络号 + 8位主机号|192-223（二进制为110开头）
 ## 信息安全
 ### 对称加密技术
 使用同一套密钥
-```mermaid
+{% mermaid %}
 graph LR
 发送者A-明文-->加密算法-Ke
 加密算法-Ke-->互联网-攻击者
 互联网-攻击者-->解密算法-Kd
 解密算法-Kd-->接受者B-明文
-```
+{% endmermaid %}
 对称加密：K<sub>e</sub>=K<sub>d</sub><br>
 特点：
 1. 加密强度不高，但效率高;
@@ -224,7 +224,7 @@ CA中心：
 注意：SSL属于传输层、会话层、表示层、应用层四层
 
 ### 主动攻击与被动攻击
-```mermaid
+{% mermaid %}
 graph TB
 被动攻击-->监听-保密性
 监听-保密性-->消息内容获取
@@ -232,11 +232,11 @@ graph TB
 主动攻击-->中断-可用性
 主动攻击-->篡改-完整性
 主动攻击-->伪造-真实性
-```
+{% endmermaid %}
 
 ### 防火墙
 特点：防外不防内
-```mermaid
+{% mermaid %}
 graph LR
 防火墙-->网络级
 防火墙-->应用级
@@ -247,7 +247,7 @@ graph LR
 应用级-->双穴主机
 应用级-->屏蔽主机
 应用级-->屏蔽子网
-```
+{% endmermaid %}
 防火墙类型 | 说明
 ---|---
 包过滤 | 只检查数据包的格式（原地址、目标地址...是否合理），速度比较快，但安全性差。
