--- a/source/_posts/并发控制与数据库完整性约束.md
+++ b/source/_posts/并发控制与数据库完整性约束.md
@@ -13,14 +13,14 @@ mermaid: true
 - 持续性
 
 ## 并发产生的问题
-```mermaid
+{% mermaid %}
 graph TB
 id1(并发产生的问题)-->id2(丢失更新 / 不可重复读问题 / 读 脏 数据)
 id1(并发产生的问题)==>id3(封锁协议)
 id3(封锁协议)-->id4(S封锁-共享锁 / X封锁-排它锁 / 两段锁协议)
 id3(封锁协议)==>id5(死锁)
 id5(死锁)-->id6(预防 / 死锁的解除)
-```
+{% endmermaid %}
 # 数据库完整性约束
 ## 实体完整性约束
 主键的完整性：
