--- a/source/_posts/操作系统.md
+++ b/source/_posts/操作系统.md
@@ -18,13 +18,13 @@ mermaid: true
     - 进程是系统进行资源分配和调度的独立单位，而程序不是。
 ### 进程的状态
 ==三态模型：==
-```mermaid
+{% mermaid %}
 graph LR
 id(就绪)--调度-->id1(运行)
 id1(运行)--等待某个事件-->id2(等待)
 id2(等待)--等待事情发生-->id(就绪)
 id1(运行)--时间片到-->id(就绪)
-```
+{% endmermaid %}
 ### 进程的同步与互斥
 - 直接制约关系
 - 间接制约关系
@@ -42,12 +42,12 @@ P操作|S=S-1|申请资源
 V操作|S=S+1|释放资源
 
 #### 同步模型 
-```mermaid
+{% mermaid %}
 graph LR
 
 id(生产者)-->id1(市场)
 id1(市场)-->id2(消费者)
-```
+{% endmermaid %}
 生产者|消费者
 -|-
 生产一个产品<br>P(s1)|P(s2)<br>从缓冲区取产品；
@@ -56,13 +56,13 @@ PV操作是成对的
 
 #### 前趋图（帮助理解）
 
-```mermaid
+{% mermaid %}
 graph LR
 id(A)-->id3(D)
 id1(B)-->id3(D)
 id2(C)-->id3(D)
 id3(D)-->id4(E)
-```
+{% endmermaid %}
 例如上图：
 Sa = Sb = Sc = Sd = 0;<br>
 ==线程D需要等待线程A、B、C的V(Sa、Sb、Sc)的唤醒 : P(Sa、Sb、Sc)==
@@ -140,12 +140,12 @@ $$
 ## 作业管理
 ### 作业状态与作业管理 
 
-```mermaid
+{% mermaid %}
 graph LR
 id(提交)-->id1(后备)
 id1(后备)-->id2(执行)
 id2(执行)-->id3(完成)
-```
+{% endmermaid %}
 
 ### 作业调度算法
 - 先来先服务法
@@ -159,23 +159,23 @@ $$
 ## 文件管理
 ### 索引文件结构
 - 直接索引：
-```mermaid
+{% mermaid %}
 graph LR
 id1(索引节点)-->id2(物理盘块)
-```
+{% endmermaid %}
 - 一级间接索引：
-```mermaid
+{% mermaid %}
 graph LR
 id1(索引节点)-->id3(地址项)
 id3(地址项)-->id2(物理盘块)
-```
+{% endmermaid %}
 - 二级间接索引：
-```mermaid
+{% mermaid %}
 graph LR
 id1(索引节点)-->id3(地址项)
 id3(地址项)-->id4(地址项)
 id4(地址项)-->id2(物理盘块)
-```
+{% endmermaid %}
 
 *物理盘块存放的是逻辑页*
 - 逻辑页计算公式
